--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
+                        <a href="#portfolio">Portfólio</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#about">Sobre</a>
@@ -90,7 +90,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Portfolio</h2>
+                    <h2>Portfólio</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -181,10 +181,10 @@
                 <div class="col-lg-4">
                     <p>
                       Analista e Desenvolvedor Web, sempre estudando novas linguagens e frameworks.
-                      Acretida que a tecnologia torna sua vida mais fácil e que a inovação tecnológica tem um efeito positivo na sociedade.
+                      Acredita que a tecnologia torna sua vida mais fácil e que a inovação tecnológica tem um efeito positivo na sociedade.
                     </p>
                 </div>
-                
+
             </div>
         </div>
     </section>
@@ -194,7 +194,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Envie me uma mensagem!! Estou esperando!!</h2>
+                    <h2>Envie uma mensagem!! Estou esperando!!</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -212,8 +212,8 @@
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Email</label>
-                                <input type="email" class="form-control" placeholder="Email" id="email" required data-validation-required-message="Por favor informe seu Email.">
+                                <label>E-mail</label>
+                                <input type="email" class="form-control" placeholder="Email" id="email" required data-validation-required-message="Por favor informe seu E-mail.">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
@@ -249,12 +249,12 @@
         <div class="footer-above">
             <div class="container">
                 <div class="row">
-                    <div class="footer-col col-md-4">
-                        <h3>Location</h3>
-                        <p>3481 Melrose Place<br>Beverly Hills, CA 90210</p>
+                    <div class="footer-col col-md-6">
+                      <h3>Endereço</h3>
+                      <p>R Alziro Zarur, 185 - Sagrado Coração<br>Juiz de Fora, MG</p>
                     </div>
-                    <div class="footer-col col-md-4">
-                        <h3>Around the Web</h3>
+                    <div class="footer-col col-md-6">
+                        <h3>Midias Socias</h3>
                         <ul class="list-inline">
                             <li>
                                 <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
@@ -273,10 +273,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
-                    </div>
+                    
                 </div>
             </div>
         </div>
@@ -284,7 +281,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Your Website 2014
+                        Copyright &copy; Meu Portfólio 2016
                     </div>
                 </div>
             </div>
