Update portfolio information

--- a/index.html
+++ b/index.html
@@ -6,12 +6,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
 
     <title>LuixCarlos</title>
 
-    <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
@@ -19,15 +16,6 @@
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <!-- <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css"> -->
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 
 </head>
 
@@ -80,11 +68,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
+                <img class="img-responsive" src="img/profile.png" style="border-radius: 50%; width: 200px; height: 200px;" alt="">
                     <div class="intro-text">
-                        <span class="name">Luiz carlos da Silva</span>
+                        <span class="name">Luiz Carlos</span>
                         <hr class="star-light">
-                        <span class="skills">Analista / Desenvolvedor</span>
+                        <span class="skills">Analista de Sistemas</span>
                     </div>
                 </div>
             </div>
@@ -133,7 +121,11 @@
                       Período – 08/03/2012 a 02/09/2012<br>
                       <br>
                       VEG Sistema de Ensino – Técnico em Manutenção e Redes<br>
-                      Período – 03/092012 até o momento.<br>
+                      Período – 03/09/2012 a 30/11/2016<br>
+                      <br>
+                      Projetus Tecnologia da Informação – Analista de Sistemas<br>
+                      Período – 01/02/2017 até o momento.<br>
+
                     </p>
                 </div>
             </div>
@@ -251,7 +243,7 @@
                         <h3>Contato</h3>
                         <p>R Alziro Zarur, 185 - Sagrado Coração<br>
                           Juiz de Fora, MG <br>
-                          luiz-limajf@hotmail.com <br>
+                          luiz.carlos.limajf@gmail.com <br>
                           32 3214-6604 / 32 99137-7221
                         </p>
                     </div>
@@ -260,6 +252,9 @@
                         <ul class="list-inline">
                             <li>
                                 <a href="https://www.facebook.com/luizcarlos.silva.3745" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://www.linkedin.com/in/luiz-carlos-silva-318911198" class="btn-social btn-outline"><i class="fa fa-linkedin"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -270,7 +265,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Meu Portfólio 2016
+                        Copyright &copy; Meu Portfólio 2020
                     </div>
                 </div>
             </div>
